--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -655,6 +655,9 @@ video {
 .mr-6{
 	margin-right: 1.5rem;
 }
+.mt-1{
+	margin-top: 0.25rem;
+}
 .block{
 	display: block;
 }
@@ -714,6 +717,12 @@ video {
 }
 .h-8{
 	height: 2rem;
+}
+.h-1{
+	height: 0.25rem;
+}
+.h-5{
+	height: 1.25rem;
 }
 .w-full{
 	width: 100%;
@@ -1061,11 +1070,20 @@ video {
 .pl-11{
 	padding-left: 2.75rem;
 }
+.pb-10{
+	padding-bottom: 2.5rem;
+}
 .text-center{
 	text-align: center;
 }
 .text-left{
 	text-align: left;
+}
+.align-middle{
+	vertical-align: middle;
+}
+.align-baseline{
+	vertical-align: baseline;
 }
 .font-serif{
 	font-family: "Roboto Slab", serif;
@@ -1085,6 +1103,18 @@ video {
 	font-size: 1rem;
 	line-height: 1.5rem;
 }
+.text-lg{
+	font-size: 1.125rem;
+	line-height: 1.75rem;
+}
+.text-3xl{
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
+.text-4xl{
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
 .font-normal{
 	font-weight: 400;
 }
@@ -1094,8 +1124,14 @@ video {
 .font-bold{
 	font-weight: 700;
 }
+.font-semibold{
+	font-weight: 600;
+}
 .uppercase{
 	text-transform: uppercase;
+}
+.italic{
+	font-style: italic;
 }
 .tracking-wide{
 	letter-spacing: 0.025em;
